--- a/index.html
+++ b/index.html
@@ -5,10 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<title>Lista de cursos DevOps da Alura</title>
+
 <body>
-    <ul>Vagrant</ul>
-    <ul>Docker</ul>
-    <ul>Ansible</ul>
-    <ul>Integração Contínua</ul>
+    <h1>Cursos de DevOps</h1>
+
+    <dl>
+
+    <dt>Vagrant</dt>
+    <dd>Gerenciando máquinas virtuais</dd>
+
+    <dt>Docker</dt>
+    <dd>Criando containers sem dor de cabeça</dd>
+
+    <dt>Ansible</dt>
+    <dd>Sua infraestrutura como código</dd>
+
+    <dt>Integração Contínua</dt>
+    <dd>Maturidade e Produtividade no desenvolvimento de software</dd>
+
+    <dt>Kubernetes</dt>
+    <dd>Introdução a orquestração de containers</dd>
+
+    </dl>
+
 </body>
 </html>
